--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -9,9 +9,8 @@
         <div class="footer-title">Institucional</div>
         <ul class="br-list">
           <li><a href="/about">Sobre o Museu</a></li>
-          <li><a href="/news">Notícias</a></li>
           <li><a href="/donations">Doações</a></li>
-          <li><a href="/equipe">Nossa Equipe</a></li>
+          <li><a href="/about">Nossa Equipe</a></li>
         </ul>
       </div>
 
@@ -19,30 +18,26 @@
         <div class="footer-title">Assuntos</div>
         <ul class="br-list">
           <li><a href="/acervo">Acervos</a></li>
-          <li><a href="/exposicoes">Exposições</a></li>
-          <li><a href="/eventos">Eventos</a></li>
-          <li><a href="/magazine">Revistas e Publicações</a></li>
-          <li><a href="/pesquisa">Pesquisa</a></li>
+          <li><a href="/news">Notícias</a></li>
+          <li><a href="/magazine">Revistas</a></li>
         </ul>
       </div>
 
       <div class="col-sm-6 col-md-3">
         <div class="footer-title">Centrais de Conteúdo</div>
         <ul class="br-list">
-          <li><a href="/videos">Vídeos</a></li>
-          <li><a href="/imagens">Imagens</a></li>
-          <li><a href="/artigos">Artigos</a></li>
           <li><a href="/jogos">Jogos Educativos</a></li>
+          <li><a href="#">Vídeos</a></li>
+          <li><a href="#">Imagens</a></li>
         </ul>
       </div>
 
       <div class="col-sm-6 col-md-3">
         <div class="footer-title">Canais de Atendimento</div>
         <ul class="br-list">
-          <li><a href="/contact">Fale Conosco</a></li>
-          <li><a href="/imprensa">Imprensa</a></li>
-          <li><a href="/visitas">Agendar Visitação</a></li>
-          <li><a href="/faq">Perguntas Frequentes</a></li>
+          <li><a href="#">Fale Conosco</a></li>
+          <li><a href="#">Agendar Visitação</a></li>
+          <li><a href="#">Perguntas Frequentes</a></li>
         </ul>
       </div>
     </div>
@@ -71,15 +66,11 @@
       </div>
 
       <div class="assigns">
-      <div class="logo-acesso-container">
-      <a href="https://www.gov.br/acessoainformacao/" title="Acesso à informação">
-          <img [src]="'/public/logos/acesso-informacao.svg'"  alt="Logo Acesso à Informação" class="logo-acesso-footer"/>
-      </a>
-      </div>
+      
 
         <div class="logo-facom-container">
-        <a href="https://facom.ufu.br/" title="Logo Facom">
-          <img [src]="'/public/logos/facom.png'" alt="logo-facom" class="logo-facom"/>
+        <a href="#" title="Logo Museu da Computação">
+          <img [src]="'/public/logos/museu-computacao-branco.png'" alt="logo-museu-computacao" class="logo-museu-computacao"/>
         </a>
         </div>
         
@@ -87,6 +78,12 @@
         <a href="https://ufu.br/" title="Logo UFU">
           <img [src]="'/public/logos/ufu_white_hor.png'" alt="Logo UFU" class ="logo-ufu"/>
         </a>
+      </div>
+
+      <div class="logo-acesso-container">
+      <a href="https://www.gov.br/acessoainformacao/" title="Acesso à informação">
+          <img [src]="'/public/logos/acesso-informacao.svg'"  alt="Logo Acesso à Informação" class="logo-acesso-footer"/>
+      </a>
       </div>
 
     </div>
