implementa : aba revista
- Página para adicionar a revista
- Novas logos do Museu da Computação
- Atualização das logos
- Novo Botão para revista

--- a/src/app/perfis-nav/perfis-nav.component.html
+++ b/src/app/perfis-nav/perfis-nav.component.html
@@ -10,6 +10,9 @@
       <a href="/games" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/games'">Jogos</a>
     </div>
     <div class="col-md-3 col-6">
+      <a href="/magazine" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/magazine'">Revistas</a>
+    </div>
+    <div class="col-md-3 col-6">
       <a href="/donations" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/donations'">Doações</a>
     </div>
   </div>
