--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,18 +12,11 @@
 				<div class="region region-nav-branding">
 					<div class="marca">
 						<div class="logo" [class.scrolled]="isScrolled">
-							<a routerLink="/home" title="Ils -l /var/www/museu-ufu/nício" rel="home">
-								<img src="public/logos/ufu_blue.svg" alt="Início">
+							<a routerLink="/home" title="Ils -l /var/www/museu-ufu/início" rel="home">
+								<img src="public/logos/museu-computacao-azul-facom.png" alt="Início">
 							</a>
 						</div>
-						<div class="nome">
-							<a routerLink="" title="Início" rel="home">
-								Universidade Federal de Uberlândia
-							</a>
-						</div>
-						<div class="subordinacao">
-							Ministério da Educação
-						</div>
+						
 					</div>
 				</div>
 			</div>
