--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -5,7 +5,7 @@
   <div class="header-container">
     <div class="header-content">
       <div class="logo-container">
-        <img [src]="'/public/logos/ufu_blue.svg'" alt="Logo UFU">
+        <img [src]="'/public/logos/museu-computacao-azul-facom.png'" alt="Logo Museu da Computação">
       </div>
       <div class="header-text">
         <div class="university-name"> <a [routerLink]=""> Universidade Federal de <br> Uberlândia</a></div>
