--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -140,7 +140,8 @@
 	}
 	.logo-container {
 		img {
-			height: 30px;
+			margin-top: 10px;
+			height: 40px;
 			width: auto;
 			margin-bottom: 0.5rem;
 		}
