Pagina inicial video

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -22,9 +22,9 @@
             <line x1="9" y1="21" x2="9" y2="9"></line>
           </svg>
         </div>
-        <h2 class="card-title">O Nosso Acervo</h2>
+        <h2 class="card-title">O Nosso Tainacan</h2>
         <p class="card-text">Navegue por artefactos e documentos históricos da computação.</p>
-        <a href="#" class="card-link">Explorar Acervo</a>
+        <a href="https://tainacan.facom.ufu.br/" class="card-link">Explorar Acervo</a>
       </div>
       <div class="card">
         <div class="card-icon">
@@ -36,9 +36,9 @@
             <path d="M12 18V4" />
           </svg>
         </div>
-        <h2 class="card-title">Exposições</h2>
-        <p class="card-text">Visite as nossas exposições virtuais temáticas e interativas.</p>
-        <a href="#" class="card-link">Ver Exposições</a>
+        <h2 class="card-title">Revista</h2>
+        <p class="card-text">Visite nossa revista para saber sobre as notícias do museu.</p>
+        <a href="/magazine" class="card-link">Ver Exposições</a>
       </div>
       <div class="card">
         <div class="card-icon">
@@ -52,7 +52,7 @@
         </div>
         <h2 class="card-title">Jogos Educativos</h2>
         <p class="card-text">Aprenda sobre a história da tecnologia de forma divertida.</p>
-        <a href="#" class="card-link">Jogar Agora</a>
+        <a href="/games" class="card-link">Jogar Agora</a>
       </div>
     </div>
 
