--- a/src/app/perfis-nav/perfis-nav.component.html
+++ b/src/app/perfis-nav/perfis-nav.component.html
@@ -1,19 +1,22 @@
-<div class=" container perfis mt-3">
+<div class="container perfis mt-3">
   <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-3 col-6">
-      <a href="/about" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/about'">Sobre o museu</a>
+    <div class="col-md-2 col-6">
+      <a href="/about" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Sobre o museu</a>
     </div>
-    <div class="col-md-3 col-6">
-      <a href="/news" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/news'">Notícias</a>
+    <div class="col-md-2 col-6">
+      <a href="/news" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Notícias</a>
     </div>
-    <div class="col-md-3 col-6">
-      <a href="/games" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/games'">Jogos</a>
+    <div class="col-md-2 col-6">
+      <a href="/games" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Jogos</a>
     </div>
-    <div class="col-md-3 col-6">
-      <a href="/magazine" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/magazine'">Revistas</a>
+    <div class="col-md-2 col-6">
+      <a href="/magazine" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Revistas</a>
     </div>
-    <div class="col-md-3 col-6">
-      <a href="/donations" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3" [href]="'/donations'">Doações</a>
+    <div class="col-md-2 col-6">
+      <a href="/donations" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Doações</a>
+    </div>
+    <div class="col-md-2 col-6">
+      <a href="https://tainacan.facom.ufu.br" class="btn btn-sm btn-outline-primary rounded-pill p-2 h-100 w-100 mb-3">Tainacan</a>
     </div>
   </div>
 </div>
