feat: atualiza footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -51,7 +51,7 @@
         <a href="https://x.com/UFU_Oficial" class="br-button circle" target="_blank" aria-label="Acesse nosso X (antigo Twitter)">
           <i class="fab fa-x-twitter"></i>
         </a>
-        <a href="https://www.instagram.com/facomufu/" class="br-button circle" target="_blank" aria-label="Acesse nosso Instagram">
+        <a href="https://www.instagram.com/museu.compufu/" class="br-button circle" target="_blank" aria-label="Acesse nosso Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://www.facebook.com/ComunicacaoUfu" class="br-button circle" target="_blank" aria-label="Acesse nosso Facebook">
@@ -69,7 +69,7 @@
       
 
         <div class="logo-facom-container">
-        <a href="#" title="Logo Museu da Computação">
+        <a href="https://facom.ufu.br/" title="Logo Museu da Computação">
           <img [src]="'/public/logos/museu-computacao-branco.png'" alt="logo-museu-computacao" class="logo-museu-computacao"/>
         </a>
         </div>
