--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,10 +3,10 @@
 
   <div class="intro">
     <p>
-      Bem-vindo ao Museu Virtual da Computação da UFU! Nosso objetivo primordial é tornar a história da 
-      computação acessível a todos, possibilitando que pessoas de qualquer parte do mundo conheçam 
+      Bem-vindo ao Museu Virtual da Computação da UFU! Nosso objetivo primordial é tornar a história da
+      computação acessível a todos, possibilitando que pessoas de qualquer parte do mundo conheçam
       os nossos acervos e entendam a transformação tecnológica que influencia o mundo atual. Este ambiente
-      foi criado para manter viva a história, promover o aprendizado e fortalecer a ligação entre a universidade e a 
+      foi criado para manter viva a história, promover o aprendizado e fortalecer a ligação entre a universidade e a
       sociedade.
     </p>
   </div>
@@ -15,10 +15,10 @@
     <h2>História</h2>
     <p>
       Idealizado em 2025, o Museu da Computação começou como uma iniciativa da Faculdade de Computação (FACOM)
-      da UFU, junto ao Centro de Tecnologia da Informação e Comunicação (CTIC) e outros departamentos. Essa 
-      ideia brotou do fascínio pela trajetória tecnológica e do desejo de manter vivos os objetos e relatos 
-      que ilustram o desenvolvimento dos sistemas de computação na universidade e em Uberlândia. A proposta 
-      busca reunir e organizar equipamentos, e também construir um ambiente dinâmico de conhecimento e 
+      da UFU, junto ao Centro de Tecnologia da Informação e Comunicação (CTIC) e outros departamentos. Essa
+      ideia brotou do fascínio pela trajetória tecnológica e do desejo de manter vivos os objetos e relatos
+      que ilustram o desenvolvimento dos sistemas de computação na universidade e em Uberlândia. A proposta
+      busca reunir e organizar equipamentos, e também construir um ambiente dinâmico de conhecimento e
       exploração.
     </p>
   </div>
@@ -26,25 +26,22 @@
   <div class="secao-missao">
     <h2>Missão</h2>
     <p>
-      A nossa missão é cuidar e facilitar a exploração da história da informática, focando em 
-      particular no conjunto de materiais e nas histórias da UFU e do pessoal de Uberlândia. Almejamos ser 
-      um local para estudo, ensino e compartilhamento de conhecimento, incentivando a importância do legado 
-      tecnológico, enriquecendo o aprendizado universitário e aproximando a instituição de ensino e a população 
+      A nossa missão é cuidar e facilitar a exploração da história da informática, focando em
+      particular no conjunto de materiais e nas histórias da UFU e do pessoal de Uberlândia. Almejamos ser
+      um local para estudo, ensino e compartilhamento de conhecimento, incentivando a importância do legado
+      tecnológico, enriquecendo o aprendizado universitário e aproximando a instituição de ensino e a população
       por meio de vivências dinâmicas, tanto online quanto (em breve) físicas.
-    </p>
-  </div>
-
-  <div class="secao-colecao">
-    <h2>Coleção</h2>
-    <p>
-      Destaques: …
     </p>
   </div>
 
   <div class="secao-equipe">
     <h2>Equipe</h2>
     <p>
-      Curadores: …
+      Maria Adriana
+      Paulo Henrique
+      Luiz Faina
+      Luiz Gustavo Martins
+      Bruno Travencolo
     </p>
   </div>
 </section>
