style: atualiza favicon
ícones de favicon atualizados para nova identidade visual do museu

--- a/src/app/features/not-found/not-found.component.html
+++ b/src/app/features/not-found/not-found.component.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-5 d-flex align-items-center justify-content-center">
 			<div class="mt-4 mt-sm-0">
-				<img ngSrc="/icons/not-found.png" alt="imagem de erro" height="380" width="455" />
+				<img ngSrc="public/icons/not-found.png" alt="imagem de erro" height="380" width="455" />
 			</div>
 		</div>
 		<div class="col text-center text-sm-left">
