--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,15 +1,8 @@
-
-<div class="create-news-button-container">
-  <button mat-raised-button color="primary" class="custom-create-news-btn" (click)="createNews()">
-    <mat-icon>add</mat-icon> Criar Nova Notícia
-  </button>
-</div>
-
 <div class="news-list" *ngIf="newsList$ | async as newsItems; else loadingOrEmpty">
   <mat-card *ngFor="let news of newsItems" class="news-card">
     <a [routerLink]="['/news/detail', news.id]" class="news-card-image-link">
       <div class="news-card-image-container">
-        <img mat-card-image class="news-main-image-card"
+        <img alt="item" mat-card-image class="news-main-image-card"
              [src]="news.summary.mainImage"
              [alt]="news.summary.title">
       </div>
@@ -17,9 +10,10 @@
 
     <div class="news-card-content-area">
       <mat-card-header class="news-card-header-no-avatar">
-        <div> <mat-card-title class="news-card-title-custom">
-          <a class="news-title" [routerLink]="['/news/detail', news.id]">{{ news.summary.title }}</a>
-        </mat-card-title>
+        <div>
+          <mat-card-title class="news-card-title-custom">
+            <a class="news-title" [routerLink]="['/news/detail', news.id]">{{ news.summary.title }}</a>
+          </mat-card-title>
           <mat-card-subtitle class="news-category">{{ news.summary.category }}</mat-card-subtitle>
         </div>
       </mat-card-header>
@@ -29,12 +23,7 @@
       </mat-card-content>
     </div>
 
-    <mat-card-actions class="news-actions-custom">
-      <button mat-button color="warn" (click)="deleteNews(news)">
-        <mat-icon>delete</mat-icon> Excluir
-      </button>
-    </mat-card-actions>
-  </mat-card>
+    </mat-card>
 </div>
 
 <ng-template #loadingOrEmpty>
