feat: adiciona jogos Math Quiz e History Quiz e ajustes no roteamento

--- a/src/app/pages/games/games.component.html
+++ b/src/app/pages/games/games.component.html
@@ -26,18 +26,34 @@
     </div>
     <div class="game-card" routerLink="./word-search">
       <div class="game-icon">
-        <i class="fas fa-brain"></i>
+        <i class="fas fa-dumbbell"></i>
       </div>
       <h2>Caça Palavras</h2>
       <p>Jogue um caça palavras temático sobre a história da computação</p>
     </div>
     <div class="game-card" routerLink="./truth-table">
       <div class="game-icon">
-        <i class="fas fa-brain"></i>
+        <i class="fas fa-desktop"></i>
       </div>
       <h2>Tabela Verdade</h2>
       <p>Teste seus conhecimentos em lógica booleana completando as tabelas de cada expressão.</p>
     </div>
+    <div class="game-card" routerLink="./math-quiz">
+      <div class="game-icon">
+        <i class="fas fa-calculator"></i>
+      </div>
+      <h2>Quiz de Matemática</h2>
+      <p>Resolva as perguntas de matemática e teste suas habilidades</p>
+    </div>
+
+    <div class="game-card" routerLink="./history-quiz">
+      <div class="game-icon">
+        <i class="fas fa-book"></i>
+      </div>
+      <h2>Quiz de História</h2>
+      <p>Teste seus conhecimentos sobre a história da computação!</p>
+    </div>
+    
   </div>
 </div>
 <router-outlet></router-outlet>
