Fix text in home.component.html
Updated the title and text to correct language and improve clarity.

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -74,13 +74,8 @@
             <line x1="9" y1="21" x2="9" y2="9"></line>
           </svg>
         </div>
-<<<<<<< Updated upstream
         <h2 class="card-title">A nossa Coleção</h2>
-        <p class="card-text">Navegue por artefatos e documentos históricos da computação.</p>
-=======
-        <h2 class="card-title">O Nosso Coleção</h2>
-        <p class="card-text">Navegue pelos nossos artefactos e documentos históricos da computação.</p>
->>>>>>> Stashed changes
+        <p class="card-text">Navegue pelos nossos artefatos e documentos históricos da computação.</p>
         <a href="https://tainacan.facom.ufu.br/" target="_blank" class="card-link">Explorar Acervo</a>
       </div>
       <div class="card">
