versao final museu

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -8,25 +8,25 @@
       <div class="col-sm-6 col-md-3">
         <div class="footer-title">Institucional</div>
         <ul class="br-list">
-          <li><a href="/about">Sobre o Museu</a></li>
-          <li><a href="/donations">Doações</a></li>
-          <li><a href="/about">Nossa Equipe</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/about">Sobre o Museu</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/donations">Doações</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/about">Nossa Equipe</a></li>
         </ul>
       </div>
 
       <div class="col-sm-6 col-md-3">
         <div class="footer-title">Assuntos</div>
         <ul class="br-list">
-          <li><a href="/acervo">Acervos</a></li>
-          <li><a href="/news">Notícias</a></li>
-          <li><a href="/magazine">Revistas</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://tainacan.facom.ufu.br/">Acervo</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/news">Notícias</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/magazine">Revistas</a></li>
         </ul>
       </div>
 
       <div class="col-sm-6 col-md-3">
         <div class="footer-title">Centrais de Conteúdo</div>
         <ul class="br-list">
-          <li><a href="/jogos">Jogos Educativos</a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="/games">Jogos Educativos</a></li>
           <li><a href="#">Vídeos</a></li>
           <li><a href="#">Imagens</a></li>
         </ul>
@@ -48,19 +48,19 @@
     <div class="footer-bottom">
       <div class="social-links">
         <div class="footer-title mb-2">Redes Sociais</div>
-        <a href="https://x.com/UFU_Oficial" class="br-button circle" target="_blank" aria-label="Acesse nosso X (antigo Twitter)">
+        <a target="_blank" rel="noopener noreferrer" href="https://x.com/UFU_Oficial" class="br-button circle" target="_blank" aria-label="Acesse nosso X (antigo Twitter)">
           <i class="fab fa-x-twitter"></i>
         </a>
-        <a href="https://www.instagram.com/museu.compufu/" class="br-button circle" target="_blank" aria-label="Acesse nosso Instagram">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/museu.compufu/" class="br-button circle" target="_blank" aria-label="Acesse nosso Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.facebook.com/ComunicacaoUfu" class="br-button circle" target="_blank" aria-label="Acesse nosso Facebook">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/ComunicacaoUfu" class="br-button circle" target="_blank" aria-label="Acesse nosso Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://www.linkedin.com/school/ufuoficial/" class="br-button circle" target="_blank" aria-label="Acesse nosso Linkedin">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/school/ufuoficial/" class="br-button circle" target="_blank" aria-label="Acesse nosso Linkedin">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://www.youtube.com/CanaldaFACOM" class="br-button circle" target="_blank" aria-label="Acesse nosso YouTube">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/CanaldaFACOM" class="br-button circle" target="_blank" aria-label="Acesse nosso YouTube">
           <i class="fab fa-youtube"></i>
         </a>
       </div>
@@ -69,19 +69,19 @@
       
 
         <div class="logo-facom-container">
-        <a href="https://facom.ufu.br/" title="Logo Museu da Computação">
-          <img [src]="'/public/logos/museu-computacao-branco.png'" alt="logo-museu-computacao" class="logo-museu-computacao"/>
+        <a target="_blank" rel="noopener noreferrer" href="https://facom.ufu.br/" title="Logo FACOM">
+          <img [src]="'/public/logos/facom-logo.png'" alt="logo-FACOM" class="logo-FACOM"/>
         </a>
         </div>
         
         <div class="logo-ufu-container">
-        <a href="https://ufu.br/" title="Logo UFU">
+        <a target="_blank" rel="noopener noreferrer" href="https://ufu.br/" title="Logo UFU">
           <img [src]="'/public/logos/ufu_white_hor.png'" alt="Logo UFU" class ="logo-ufu"/>
         </a>
       </div>
 
       <div class="logo-acesso-container">
-      <a href="https://www.gov.br/acessoainformacao/" title="Acesso à informação">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.gov.br/acessoainformacao/" title="Acesso à informação">
           <img [src]="'/public/logos/acesso-informacao.svg'"  alt="Logo Acesso à Informação" class="logo-acesso-footer"/>
       </a>
       </div>
